fix: hide scrollbar in pop up about

--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,12 @@
   font-family: 'RecoletaBlack';
   src: url('../public/fonts/Recoleta-Black.ttf') format('truetype');
 }
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
